# homework

./: linked_list.py  minesweeper.py  net_imitation.py  pyproject.toml
basic_python/: minesweeper.py  net_imitation.py
effective_mobile/.obsidian/: workspace.json
effective_mobile/questions/: 1..md  2..md  3..md
effective_mobile/web архитектура/: UoW.md  Брокеры сообщений.md  Кэширование.md  Репозиторий.md
effective_mobile/Основы Python/: 1. Механизм работы Python.md  10. Декораторы.md  11. Iterable, Iterator, Generator.md  12.   MRO.md  13. Type annotation.md  14. ООП.md  15. SOLID.md  2. Компилятор vs Интерпретатор.md  3. Типы данных в Python.md  4. Классы сложности операций в Python.md  5.  Память в Python.md  6. Особенности словарей и маг. метод __hash__.md  7. Метаклассы.md  8. Анонимная функция.md  9. __slots__.md
