[tool.poetry]
name = "linkedlist"
version = "0.1.0"
description = ""
authors = ["ghost <i@nowtiloos.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^69.1.1"
black = "^24.3.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
